deploy-k8s/manifests/database.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: student-api

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: student-api
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---

apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: student-api
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  type: ClusterIP
  #TODO: add volume
